feat: scan tracking
